# a3d-underwater-simulator

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
.devcontainer/: devcontainer.json
.github/workflows/: cmake-single-platform.yml
apps/: CMakeLists.txt  app.cpp
include/: optix.hpp
include/gpu/: exceptions.hpp  optix.hpp
src/: CMakeLists.txt  main.cc  optix.cpp  optix.cu
src/gpu/: optix.cu
